Fixed youtube badge not showing up
- Fixed a sizing error with platform badges

--- a/widget/chat/css/chat.css
+++ b/widget/chat/css/chat.css
@@ -104,6 +104,7 @@ body {
   display: inline-block;
   background-size: contain;
   background-repeat: no-repeat;
+  padding: 0;
 }
 
 .badges .twitch {
